Dostowanie aplikacji do nowszych wersji bibliotek